# ageofcrash

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  config.ron  rust-analyzer.toml  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: code-quality.yml  tests.yml
ageofcrash-app/: Cargo.toml
ageofcrash-app/src/: config.rs  config_watcher.rs  hotkey.rs  hud.rs  main.rs
mouse-barrier/: Cargo.toml
mouse-barrier/src/: lib.rs
