[workspace]
resolver = "2"

members = ["mouse-barrier", "ageofcrash-app"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["William Findlay <william ăť williamfindlay ḋőť com>"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
winapi = { version = "0.3", features = [
    "winuser",
    "processthreadsapi",
    "libloaderapi",
    "errhandlingapi",
    "wingdi",
    "dwmapi",
    "winerror",
    "winnt",
    "mmsystem",
] }
config = { version = "0.15.13", features = ["ron"] }
ron = "0.8"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
