[package]
name = "ageofcrash-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "ageofcrash"
path = "src/main.rs"

[dependencies]
mouse-barrier = { path = "../mouse-barrier" }
ron.workspace = true
serde.workspace = true
winapi.workspace = true
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
figment.workspace = true
serde_json = "1.0"
lazy_static = "1.4"

[dev-dependencies]
tempfile = "3.0"
proptest = "1.4"